[package]
name = "hello-bevy"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1" #{, features = ["dynamic"] }
#bevy-inspector-egui = "0.13.0"
#bevy-inspector-egui-rapier = { version = "0.5.0", features = ["rapier3d"] }
#bevy_mod_wanderlust = "0.2.2"
bevy_rapier3d = "0.17.0"
bevy_editor_pls = "0.1.1" # { git = "https://github.com/jakobhellermann/bevy_editor_pls" }
rand = "0.8.5"
#pathfinding = "3.0.0"
#bevy_renet = "0.0.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
